--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </h1>
 
   <!-- Intro -->
+  <div class="bubble">
   <h2>Introduction</h2>
   <p><b>Hello, I’m Wesley.</b></p>
   <p>
@@ -25,8 +26,10 @@
   </p>
 
   <hr />
+  </div>
 
   <!-- Skills -->
+  <div class="bubble">
   <h2>Skills</h2>
   <ul>
     <li><b>Programming & Control:</b> C++, JavaScript, PLC, MATLAB, Verilog</li>
@@ -36,8 +39,10 @@
   </ul>
 
   <hr />
+  </div>
 
   <!-- Experience -->
+  <div class="bubble">
   <h2>Work Experience (Co-op)</h2>
 
   <p>
@@ -79,8 +84,10 @@
   </ul>
 
   <hr />
+  </div>
 
   <!-- Projects -->
+  <div class="bubble">
   <h2>Projects</h2>
 
   <p><b>Smart Pet Feeder (IoT & Automation)</b> <br /><small>Sep 2025 – Dec 2025</small></p>
@@ -102,15 +109,19 @@
   </ul>
 
   <hr />
+  </div>
 
   <!-- Education -->
+  <div class="bubble">
   <h2>Education</h2>
   <p><b>McMaster University</b><br />Automation Systems Engineering Technology (BTech) — Expected 2026<br />Hamilton, Ontario</p>
   <p><b>Waterloo Collegiate Institute</b><br />2018 – 2022<br />Waterloo, Ontario</p>
 
   <hr />
+  </div>
 
   <!-- Contact -->
+  <div class="bubble">
   <h2>Contact</h2>
   <ul>
     <li>Email: <a href="mailto:xu553@mcmaster.ca">xu553@mcmaster.ca</a></li>
@@ -119,19 +130,24 @@
   <p><small>Note: This public webpage intentionally excludes sensitive personal information (phone number, student ID, address).</small></p>
 
   <hr />
+  </div>
 
   <!-- Hobbies -->
+  <div class="bubble">
   <h2>Hobbies</h2>
   <ol>
     <li><b>Gym Training</b> - Regular strength and conditioning workout</li>
     <li><b>Table Tennis</b> - 5 years of playing experience</li>
     <li><b>Photography</b> - Landscape and wildlife photography</li>
   </ol>
+  </div>
 
   <!-- Footer -->
+  <div class="bubble">
   <footer>
     <p>&#169; 2026 Wesley Xu</p>
   </footer>
+  </div>
   </div>
 </body>
 </html>
