Added code to make the webpage compatible with mobile devices.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p class="tagline">
           Automation Systems Engineering Technology (BTech) • McMaster University
         </p>
-        <p class="header-links:">
+        <p class="header-links">
           <a href="mailto:xu553@mcmaster.ca">xu553@mcmaster.ca</a>
           <span class="sep">•</span>
           <a href="https://linkedin.com/in/wesley-xu-167531264" target="_blank" rel="noopener">
